<resources>
    <string name="app_name">Renegade Parade</string>
    <string name="settings_bottom">Settings</string>
    <string name="play_bottom">Play Match</string>
    <string name="Stats_bottom">Stats</string>
    <string name="Stats_back">Back</string>
    <string name="Stats_page">Stats</string>
    <string name="Stats_progress">99%</string>
    <string name="Settings_Page">Settings</string>
    <string name="settings_back">Back</string>
    <string name="settings_username">Input Username Here</string>
    <string name="settings_unmute">Unmute</string>
    <string name="settings_mute">Mute</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="default_color">Default</string>
    <string name="_1">1</string>
    <string name="character_color">Choose Character Color</string>
</resources>