<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:background="@drawable/background">





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings_Page"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="178dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/settings_title"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/character_color"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="258dp"
        android:id="@+id/color_title"/>

    <Button
        android:id="@+id/blue_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/color_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="321dp"
        android:text="@string/blue"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/blue_character"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="321dp"
        android:text="@string/green"
        android:id="@+id/green_character"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/green_character"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="321dp"
        android:text="@string/red"
        android:id="@+id/red_character"
        />

    <Button
        android:id="@+id/settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_back"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_color"
        app:layout_constraintTop_toBottomOf="@id/red_character"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/default_color"
        />



    <Button
        android:id="@+id/mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_mute"
        app:layout_constraintLeft_toRightOf="@id/unmute"
        app:layout_constraintBottom_toBottomOf="parent"


        />

    <Button
        android:id="@+id/unmute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_unmute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

    />

</androidx.constraintlayout.widget.ConstraintLayout>