<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:background="@drawable/mainscreen"
    >
    <!-- <
        by alex
        /-->

    <Button
        android:id="@+id/settingsbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:alpha="0.40"
        android:text="@string/settings_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/statsbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:alpha="0.40"
        android:text="@string/Stats_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/playbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_bottom"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="178dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




   <!-- <
                NOTE: code up for review, next phase
   Button
        android:onClick="PlayBackgroundSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Run background Sound"
        app:layout_constraintBottom_toBottomOf="parent"
        />
-->
</androidx.constraintlayout.widget.ConstraintLayout>